Deposit money button added and make it dynamic

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
                 <!-- account balance  -->
                 <div class="stats shadow">
                     <div class="stat">
-                      <div  class="stat-title">Account Balance </div>
-                      <div id="account-balance" class="stat-value">9400</div>
+                      <div  class="stat-title">Current Balance </div>
+                      <div id="account-balance" class="stat-value">10000</div>
                     </div>
                   </div>
                   <div class="divider"></div>
                   <!-- features starts  -->
                    <div>
-                    <button id="show-add-money-form" class="btn btn-lg">Add Money</button>
+                    <button id="show-add-money-form" class="btn btn-lg">Deposit</button>
                     <button id="show-cash-out-form" class="btn btn-lg">Cash Out </button>
                     <button id="show-transaction-history" class="btn btn-lg ">Transactions</button>
                    </div>
