--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payoo MFS Function</title>
+    <title>Mobile Banking with DOM</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -89,6 +89,7 @@
     </main>
     <script src="js/utilities2.js"></script>
    <script src="js/addMoney2.js"></script>
+   <script src="js/addMoney.js"></script>
    <script src="js/math.js"></script>
    <script src="js/cashOut.js"></script>
    <script src="js/features.js"></script>
