--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                   <!-- features starts  -->
                    <div>
                     <button id="show-add-money-form" class="btn btn-lg">Deposit</button>
-                    <button id="show-cash-out-form" class="btn btn-lg">Cash Out </button>
-                    <button id="show-transaction-history" class="btn btn-lg ">Transactions</button>
+                    <button id="show-cash-out-form" class="btn btn-lg">Withdraw </button>
+                    <button id="show-transaction-history" class="btn btn-lg ">Statement</button>
                    </div>
                    <!-- features ends  -->
                    <div class="divider"></div>
@@ -34,7 +34,7 @@
                     <form class="card-body">
                       <div class="form-control">
                         <label class="label">
-                          <span class="label-text"> Add Money Amount</span>
+                          <span class="label-text"> Deposit Amount</span>
                         </label>
                         <input id="input-add-money" type="text" placeholder="Amount" class="input input-bordered" required />
                       </div>
@@ -45,7 +45,7 @@
                         <input type="password" id="input-pin-number" placeholder="Pin Number" autocomplete="off" class="input input-bordered" required />
                       </div>
                       <div class="form-control mt-6">
-                        <button id="btn-add-money" class="btn btn-primary">Add Money</button>
+                        <button id="btn-add-money" class="btn btn-primary">Deposit</button>
                       </div>
                     </form>
                   </div>
@@ -55,7 +55,7 @@
                         <form class="card-body">
                           <div class="form-control">
                             <label class="label">
-                              <span class="label-text"> Cash Out Amount</span>
+                              <span class="label-text"> Withdraw Amount</span>
                             </label>
                             <input id="input-cash-out" type="text" placeholder="Amount" class="input input-bordered" required />
                           </div>
@@ -66,7 +66,7 @@
                             <input type="password" id="input-cash-out-pin" placeholder="Pin Number" autocomplete="off" class="input input-bordered" required />
                           </div>
                           <div class="form-control mt-6">
-                            <button id="btn-cash-out" class="btn btn-primary">Cash Out</button>
+                            <button id="btn-cash-out" class="btn btn-primary">Withdraw</button>
                           </div>
                         </form>
                       </div>
@@ -90,7 +90,7 @@
     <script src="js/utilities2.js"></script>
    <script src="js/addMoney2.js"></script>
    <script src="js/addMoney.js"></script>
-   <script src="js/math.js"></script>
+   <!-- <script src="js/math.js"></script> -->
    <script src="js/cashOut.js"></script>
    <script src="js/features.js"></script>
    
