--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                    </div>
                    <!-- features ends  -->
                    <div class="divider"></div>
-                   <!-- add money form start -->
+                   <!-- Deposit form start -->
                    <div id="add-money-form" class=" hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                     <form class="card-body">
                       <div class="form-control">
@@ -49,8 +49,8 @@
                       </div>
                     </form>
                   </div>
-                    <!-- add money form end -->
-                     <!-- cash out start  -->
+                    <!-- Deposit form end -->
+                     <!-- Withdraw start  -->
                      <div id="cash-out form" class="hidden card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl">
                         <form class="card-body">
                           <div class="form-control">
@@ -70,7 +70,7 @@
                           </div>
                         </form>
                       </div>
-                    <!-- cash out end -->
+                    <!-- Withdraw end  -->
                      <!-- transaction start -->
                       <div id="transaction-section" class="hidden">
                         <h2 class="text-3xl text-center">Transaction History</h2>
@@ -90,7 +90,6 @@
     <script src="js/utilities2.js"></script>
    <script src="js/addMoney2.js"></script>
    <script src="js/addMoney.js"></script>
-   <!-- <script src="js/math.js"></script> -->
    <script src="js/cashOut.js"></script>
    <script src="js/features.js"></script>
    
