Button Designe  edited

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
               <div class="artboard artboard-demo phone-3">
                 <!-- account balance  -->
                 <div class="stats shadow">
-                    <div class="stat">
-                      <div  class="stat-title">Current Balance </div>
-                      <div id="account-balance" class="stat-value">10000</div>
+                    <div class="stat bg-blue-400">
+                      <div  class="stat-title text-black">Current Balance </div>
+                      <div id="account-balance" class="stat-value text-black">10000</div>
                     </div>
                   </div>
                   <div class="divider"></div>
                   <!-- features starts  -->
                    <div>
-                    <button id="show-add-money-form" class="btn btn-lg">Deposit</button>
-                    <button id="show-cash-out-form" class="btn btn-lg">Withdraw </button>
-                    <button id="show-transaction-history" class="btn btn-lg ">Statement</button>
+                    <button id="show-add-money-form" class="btn btn-lg bg-green-500 text-black">Deposit</button>
+                    <button id="show-cash-out-form" class="btn btn-lg bg-red-500 text-black">Withdraw </button>
+                    <button id="show-transaction-history" class="btn btn-lg bg-sky-300 text-black ">Statement</button>
                    </div>
                    <!-- features ends  -->
                    <div class="divider"></div>
